--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "operations",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://github.com/mtford90/operations.js",
   "authors": [
     "Michael Ford <mtford@gmail.com>"
   ],
   "description": "A library for managing complex chains of asynchronous operations in Javascript.",
-  "main": "operations-0.1.0.js",
+  "main": "operations.js",
   "keywords": [
     "async",
     "operation",
