fix bower release

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "operations",
-  "version": "0.1.2a",
+  "version": "0.1.2.1",
   "homepage": "https://github.com/mtford90/operations.js",
   "authors": [
     "Michael Ford <mtford@gmail.com>"
